--- a/app/views/assignment_mailer/notify.html.erb
+++ b/app/views/assignment_mailer/notify.html.erb
@@ -1,13 +1,169 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <p><%= I18n.t("mail_#{@event}".to_sym, @info) %></p>
-    <p><%= @title %></p>
-    <% unless @event =~/unassign/ %>
-      <p><%= I18n.t(:mail_see_it) %> <%= @url %></p>
-    <% end %>
-  </body>
-</html>
+<%= render "shared/header" %>
+
+<style>
+  @media only screen and (max-width: 481px) {
+    .notify-title a {
+      display: block !important;
+      width: auto !important;
+    }
+  }
+
+
+  @media only screen and (max-width: 601px) {
+    .notify-title__content {
+      padding: 0 30px;
+    }
+  }
+
+
+  @media only screen and (max-width: 481px) {
+    .notify-title__content {
+      padding: 0 !important;
+    }
+  }
+</style>
+
+<!--~~// Notify-title module start \\~~-->
+<!--————————————————————————————-->
+  <div class="notify-title" style="text-align: left !important;">
+            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+              <tr>
+                <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+              </tr>
+            </table>
+            <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+              <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                <tr>
+                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+                    <div class="notify-title__content">
+                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
+                        <%= @info[:greeting] %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 5px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
+                        <%= I18n.t("mails_notifications.assignment.#{@info[:event_key]}_title") %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 12px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="text-gray" style="color: #757575 !important;">
+                        <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
+                          <%= I18n.t("mails_notifications.assignment.#{@info[:event_key ]}_text", author: @info[:author], project: "<strong>#{@info[:project]}</strong>", team: @info[:team]).html_safe %>
+                        </div>
+                      </div>
+                    </div>
+                    <!--————————————————————————————-->
+                    <!--~~\\ Notify-title module end //~~-->
+
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                      <tr>
+                        <td style="border-collapse: collapse; font-size: 28px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                      </tr>
+                    </table>
+                    <style>
+                      @media only screen and (max-width: 481px) {
+                        .section__title {
+                          padding-left: 20px !important;
+                          padding-right: 20px !important;
+                        }
+                      }
+
+
+                      @media only screen and (max-width: 481px) {
+                        .section__title .text {
+                          font-size: 17px !important;
+                          line-height: 25px !important;
+                        }
+                      }
+
+                      @media only screen and (max-width: 481px) {
+                        body .media-list__image {
+                          width: 300px !important;
+                          height: auto !important;
+                        }
+                      }
+
+
+                      @media only screen and (max-width: 481px) {
+                        body .media-list__image img {
+                          width: 300px !important;
+                        }
+                      }
+                    </style>
+
+                    <!--~~// Section module start \\~~-->
+                    <!--————————————————————————————-->
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+                      <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                        <tr>
+                           <td class="section__title" style="padding: 5px 0px;" align="left">
+                            <%= link_to(@info[:title], @info[:url], :class => 'h3 link', :style => "font-size: 21px; letter-spacing: -0.2px; line-height: 29px; font-weight: bold !important; color: #0d6cf7 !important; text-decoration: none;") %>
+                          </td>
+                        </tr>
+                        <tr style="text-align:left;vertical-align:baseline">
+                          <td class="section__title" style="padding: 23px 0px 14px 0px;" align="left">
+                            <%= image_tag(@info[:profile_image], height: "20", width: "20", style: "font-size:14px; height:20px; width:20px; line-height:20px; border-radius:4px; vertical-align:top") %>
+                            &nbsp;
+                            <span class="span text text-gray" style="font-size: 14px; line-height: 18px; color: #757575 !important;">
+                              <%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
+                            </span>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td class="section__title" style="padding: 23px 30px;" bgcolor="#fff" align="left">
+                            <%= I18n.t("mails_notifications.assignment.#{@info[:event_type]}_log",
+                              model: I18n.t("activerecord.models.#{@info[:model]}"),
+                              username: @info[:username],
+                              author: link_to(@info[:author],
+                                "#{CONFIG['checkdesk_client']}/check/user/#{@info[:author_id]}",
+                                :class => 'link',
+                                :style => "color: #0d6cf7 !important; text-decoration: none;"
+                                )
+                              ).html_safe
+                            %>
+                          </td>
+                        </tr>
+                      </table>
+
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 15px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td class="notify-title__button text-white" style="background: #2E77FC; border-collapse: collapse; border-radius: 4px; color: #f1f1f1 !important; display: inline-block; padding-bottom: 15px; padding-left: 25px; padding-right: 23px; padding-top: 15px;"
+                            width="auto">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; padding-right: 14px;">
+                                  <span class="span" style="font-size: 17px; font-weight: bold; line-height: 20px;">
+                                    <%= link_to(@info[:button], @info[:url], :class => 'link', :style => "color: #fff !important; text-decoration: none;") %>
+                                  </span>
+                                </td>
+                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+
+                    </div>
+<!-- render the project template (more general one) if partial template not exists -->
+<%= render @info[:model] rescue render "project" %>
+
+<%= render "shared/footer" %>
