--- a/app/views/assignment_mailer/notify.text.erb
+++ b/app/views/assignment_mailer/notify.text.erb
@@ -1,7 +1,26 @@
-<%= I18n.t("mail_#{@event}".to_sym, @info) %>
+<%= @info[:greeting] %>
 
-<%= @title %>
+==========================================
+<%= I18n.t("mails_notifications.assignment.#{@info[:event_key]}_title") %>
+==========================================
+<%= I18n.t("mails_notifications.assignment.#{@info[:event_key ]}_text", author: @info[:author], project: @info[:project], team: @info[:team]) %>
 
-<% unless @event =~/unassign/ %>
-  <%= I18n.t(:mail_see_it) %> <%= @url %>
-<% end %>
+
+<%= @info[:title] %>
+
+<%= "#{@info[:author]} (#{@info[:role]}) - #{@info[:created_at]}" %>
+> <%=
+	I18n.t("mails_notifications.assignment.#{@info[:event_type]}_log",
+					model: I18n.t("activerecord.models.#{@info[:model]}"),
+	        username: @info[:username],
+	        author: @info[:author],
+        )
+  %>
+
+<%= @info[:button] %>
+<%= @info[:url] %>
+
+<%= render @info[:model] rescue render "project"  %>
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
