--- a/app/views/team_user_mailer/request_to_join_processed.html.erb
+++ b/app/views/team_user_mailer/request_to_join_processed.html.erb
@@ -1,13 +1,132 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <% if @accepted %>
-      <p><%= I18n.t(:mail_view_joined, team: @team.name, url: @url) %></p>
-    <% else %>
-      <p><%= I18n.t(:mail_view_rejected_to_join, team: @team.name) %></p>
-    <% end %>
-  </body>
-</html>
+<%= render "shared/header" %>
+
+  <style>
+    @media only screen and (max-width: 481px) {
+      .notify-title a {
+        display: block !important;
+        width: auto !important;
+      }
+    }
+
+
+    @media only screen and (max-width: 601px) {
+      .notify-title__content {
+        padding: 0 30px;
+      }
+    }
+
+
+    @media only screen and (max-width: 481px) {
+      .notify-title__content {
+        padding: 0 !important;
+      }
+    }
+  </style>
+
+  <!--~~// Notify-title module start \\~~-->
+  <!--————————————————————————————-->
+  <div class="notify-title" style="text-align: left !important;">
+    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+      </tr>
+    </table>
+    <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+      <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+                <tr>
+                  <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
+                    <div class="notify-title__content">
+                      <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
+                        <%= @info[:greeting] %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 13px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
+                        <%= I18n.t("mails_notifications.request_to_join.#{@info[:request_status]}_title", team: @info[:team].name) %>
+                      </div>
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 12px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+                      <div class="text-gray" style="color: #757575 !important;">
+                        <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
+                          <%= 
+                            I18n.t("mails_notifications.request_to_join.#{@info[:request_status]}_text",
+                                team: @info[:team].name,
+                                app_name: CONFIG['app_name'],
+                                url: link_to(I18n.t("mails_notifications.request_to_join.team_page"), @info[:url], :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;")
+                              ).html_safe
+                          %>
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                      <tr>
+                        <td style="border-collapse: collapse; font-size: 28px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                      </tr>
+                    </table>
+
+                    <!--————————————————————————————-->
+                    <!--~~\\ Notify-title module end //~~-->
+                  <% if @info[:request_status] == 'approved' %>
+
+                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td class="notify-title__button text-white" style="background: #2E77FC; border-collapse: collapse; border-radius: 4px; color: #f1f1f1 !important; display: inline-block; padding-bottom: 15px; padding-left: 25px; padding-right: 23px; padding-top: 15px;"
+                            width="auto">
+                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                              <tr>
+                                <td style="border-collapse: collapse; padding-right: 14px;">
+                                  <span class="span" style="font-size: 17px; font-weight: bold; line-height: 20px;">
+                                    <%=
+                                      link_to(I18n.t("mails_notifications.request_to_join.team_button"), @info[:url],
+                                          :style => "text-decoration: none !important;color: #fff !important;"
+                                        )
+                                    %>
+                                  </span>
+                                </td>
+                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+
+                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                        <tr>
+                          <td style="border-collapse: collapse; font-size: 23px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                        </tr>
+                      </table>
+
+                    </div>
+                  <% end %>
+
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+                      <tr>
+                        <td style="border-collapse: collapse; font-size: 23px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+                      </tr>
+                    </table>
+                    <style>
+                      @media only screen and (max-width: 601px) {
+                        th.footer {
+                          padding: 0 30px !important;
+                        }
+                      }
+
+
+                      @media only screen and (max-width: 481px) {
+                        th.footer {
+                          padding: 0 !important;
+                        }
+                      }
+                    </style>
+
+<%= render "shared/footer" %>
