--- a/app/views/assignment_mailer/ready.text.erb
+++ b/app/views/assignment_mailer/ready.text.erb
@@ -1,1 +1,22 @@
-<%= I18n.t("mail_body_assignments_ready_#{@event}", { username: @username, project_title: @project_title, project_url: @project_url, assignee: @assignee, app_name: @app_name }) %>
+<%= @info[:greeting] %>
+
+==========================================
+ <%= I18n.t("mails_notifications.assignment.ready_#{@info[:event]}_title") %>
+==========================================
+
+<%= 
+	I18n.t("mails_notifications.assignment.ready_#{@info[:event]}_text",
+		assignee: @info[:assignee],
+		url: @info[:project_title]
+	)
+ %>
+
+ ...
+
+ <%= I18n.t("mails_notifications.assignment.project_button") %>
+ <%= @info[:project_url] %>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
