--- a/app/views/delete_user_mailer/notify.html.erb
+++ b/app/views/delete_user_mailer/notify.html.erb
@@ -26,18 +26,18 @@
   <!--~~// Notify-title module start \\~~-->
   <!--————————————————————————————-->
   <div class="notify-title" style="text-align: left !important;">
-            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-              <tr>
-                <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
-              </tr>
-            </table>
-            <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
-              <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
+    <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td style="border-collapse: collapse; font-size: 44px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
+      </tr>
+    </table>
+    <div class="container " width="600" style="margin: 0 auto; text-align: left; width: 600px;">
+      <table class="container__table" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; margin: 0 auto; mso-table-lspace: 0pt; mso-table-rspace: 0pt; table-layout: fixed;">
                 <tr>
                   <th class="col-1" style="font-weight: normal; mso-line-height-rule: exactly; padding: 0;" width="600px" valign="top" align="left">
                     <div class="notify-title__content">
                       <div class="h3 notify-title__proj" style="font-size: 21px; letter-spacing: -0.2px; line-height: 29px;">
-                        <%= I18n.t("mails_notifications.greeting", username: @resource.name) %>
+                        <%= @info[:greeting] %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -45,7 +45,7 @@
                         </tr>
                       </table>
                       <div class="h1 notify-title__header" style="font-size: 40px; font-weight: bold; letter-spacing: -0.8px; line-height: 40px;">
-                        <%= I18n.t(:mail_view_welcome, app_name: CONFIG['app_name']) %>
+                        <%= I18n.t("mails_notifications.delete_user.header_title") %>
                       </div>
                       <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                         <tr>
@@ -54,7 +54,12 @@
                       </table>
                       <div class="text-gray" style="color: #757575 !important;">
                         <div class="h3" style="font-size: 21px; letter-spacing: -0.2px; line-height: 30px;">
-                          <%= I18n.t(:mail_view_register, app_name: CONFIG['app_name']) %>
+                          <%= 
+                            I18n.t("mails_notifications.delete_user.header_text",
+                                id: @info[:user].id,
+                                anonymous: link_to(I18n.t("mails_notifications.delete_user.anonymous"), "#{CONFIG['checkdesk_client']}/check/user/#{@info[:user].id}", :class => 'link', :style => "color: #0d6cf7 !important; text-decoration: none;")
+                              ).html_safe
+                          %>
                         </div>
                       </div>
                     </div>
@@ -67,40 +72,6 @@
 
                     <!--————————————————————————————-->
                     <!--~~\\ Notify-title module end //~~-->
-
-                    <div class="container wide" width="600" style="margin: 0 auto; text-align: left; width: 600px;">
-
-                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                        <tr>
-                          <td class="notify-title__button text-white" style="background: #2E77FC; border-collapse: collapse; border-radius: 4px; color: #f1f1f1 !important; display: inline-block; padding-bottom: 15px; padding-left: 25px; padding-right: 23px; padding-top: 15px;"
-                            width="auto">
-                            <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                              <tr>
-                                <td style="border-collapse: collapse; padding-right: 14px;">
-                                  <span class="span" style="font-size: 17px; font-weight: bold; line-height: 20px;">
-                                    <%=
-                                      link_to(I18n.t("mail_confirm_button"), 
-                                        confirmation_url(@resource, host: @host, confirmation_token: @resource.confirmation_token, client_host: @client_host),
-                                        :style => "text-decoration: none !important;color: #fff !important;"
-                                        )
-                                    %>
-                                  </span>
-                                </td>
-                                <td style="border-collapse: collapse;" align="right"><img src="https://images.ctfassets.net/g118h5yoccvd/1ji47bOy90143djFnEPuj1/936ebe3388362a7861715a1b819b231b/arrow_3x.png" alt="arrow-icon" width="7" style="-ms-interpolation-mode: bicubic; border: 0 none; height: auto; line-height: 100%; outline: none; text-decoration: none;">
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
-                      </table>
-
-                      <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-                        <tr>
-                          <td style="border-collapse: collapse; font-size: 23px; line-height: 1; text-decoration: none !important;">&nbsp;</td>
-                        </tr>
-                      </table>
-
-                    </div>
 
                     <table cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
                       <tr>
