--- a/app/views/admin_mailer/send_team_download_link.text.erb
+++ b/app/views/admin_mailer/send_team_download_link.text.erb
@@ -1,1 +1,14 @@
-<%= I18n.t(:team_dump_download_mail, team: @team, link: @link, days: @days, app: @app, password: @password) %>
+<%= I18n.t("mails_notifications.greeting_anonymous") %>
+
+==========================================
+<%= I18n.t("mails_notifications.admin_mailer.team_dump_title") %>
+==========================================
+
+<%= I18n.t("mails_notifications.admin_mailer.team_dump_text", team: @team, link: @link) %>
+
+<%= t("mails_notifications.admin_mailer.team_dump_text_2", days: @days, password: @password) %>
+
+...
+
+<%= strip_tags I18n.t("mails_notifications.copyright_html", app_name: CONFIG['app_name']) %>
+https://meedan.com
